--- a/vue/CSS/page.css
+++ b/vue/CSS/page.css
@@ -1,6 +1,6 @@
 .header{
 	background-color: rgb(242,242,242);
-	background-image: url("../images/logo-ATC.png");
+	background-image: url("../images/ChezVeLite.gif");
 	background-repeat: no-repeat;
 	background-position: right;
 		border: 1px solid #d4d4d4;
@@ -32,7 +32,7 @@ section{
 
  .aside{
  	right:7px;
- 	top:175px;
+ 	top:137px;
  	width: 300px;
  	bottom: 55px;
  	position: fixed;
